--- a/client/src/components/MemoryDetails/MemoryDetails.scss
+++ b/client/src/components/MemoryDetails/MemoryDetails.scss
@@ -95,6 +95,7 @@
     }
 
     &--delete {
+      position: relative;
       cursor: pointer;
       transition: 0.3s;
       padding: 0;
